Fixed card divider too long

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body {
 }
 
 .card-title {
-    width: 100%;
+    width: 98%;
     height: 23px;
     padding: 10px;
     border-bottom: 1px solid var(--divider);
